--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,6 @@
       "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedOrigins":"http://localhost:4200"
 }
